new proj/src/objects/GE_PRM_Product_Authorization__c.object
<CustomObject>
    <description>PRM Object to Hold Product Authorization for a Recommendation</description>
    <fields>
        <fullName>GEPRM_Target_CY__c</fullName>
        <description>Target for Current year</description>
        <inlineHelpText>Target for Current year</inlineHelpText>
        <label>Orders Target for current Year $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GEPRM_Target_NY__c</fullName>
        <description>Target for next year</description>
        <inlineHelpText>Target for next year</inlineHelpText>
        <label>Orders Target for Next Year $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Agreement_Category__c</fullName>
        <formula>TEXT( GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Discount_rate_requested__c</fullName>
        <label>Discount/Commission rate requested %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Offering__c</fullName>
        <label>Offering</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_P_L__c</fullName>
        <formula>TEXT(GE_PRM_Tier_1_New__c) + TEXT(GE_PRM_Tier_2__c) + TEXT(GE_PRM_Tier_3__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Pipeline__c</fullName>
        <label>Pipeline $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Previous_Year_Orders_Volume__c</fullName>
        <label>Previous Year Orders Volume $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Product_Line_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Line Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Recommendation__c</fullName>
        <label>Recommendation</label>
        <referenceTo>GE_PRM_Recommendation__c</referenceTo>
        <relationshipName>Product_Authorization</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GE_PRM_Region__c</fullName>
        <formula>TEXT(GE_PRM_Recommendation__r.GE_PRM_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Risk_Score__c</fullName>
        <formula>GE_PRM_Recommendation__r.GE_PRM_Risk_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Standard_discount_Rate__c</fullName>
        <label>Standard Commission/Discount rate %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_0__c</fullName>
        <formula>GE_PRM_Recommendation__r.GE_PRM_Energy_Business_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Business Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_1_New__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_1__c</fullName>
        <formula>Text(GE_PRM_Recommendation__r.GE_PRM_Business_Tier_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_2__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_PRM_Tier_1_New__c</controllingField>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Production (D&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Sea Systems (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_YTD_Orders_Volume__c</fullName>
        <label>YTD Orders Volume  $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Line</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Product Line #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Lines</pluralLabel>
    <recordTypes>
        <fullName>GE_PRM_Product_Authorization</fullName>
        <active>true</active>
        <label>Product Authorization</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PRM_Product_Authorization_Locked</fullName>
        <active>true</active>
        <label>Product Authorization Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Line_NRT</fullName>
        <active>true</active>
        <label>Product Line NRT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Compliance_manager_click_Generate_DOA_pr</fullName>
        <active>true</active>
        <description>Compliance_manager_click_Generate_DOA on product line object</description>
        <errorConditionFormula>AND(GE_PRM_Recommendation__r.GE_PRM_Generate_DOA__c =TRUE, ISNEW() )</errorConditionFormula>
        <errorMessage>When the compliance manager generates DOA, no additional product lines can be added to the recommendation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Business_Tier_1_should_Be_Same</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(GE_PRM_Tier_1_New__c)  &lt;&gt; TEXT(GE_PRM_Recommendation__r.GE_PRM_Business_Tier_1__c)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Tier_1_New__c</errorDisplayField>
        <errorMessage>Only the Tier 1 value selected in the recommendation is possible</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Disc_Rate_n_Rate_Req_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISPICKVAL( GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c , &apos;New&apos;) , ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c, &apos;Renewal&apos;) , ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c, &apos;New Product Line/Service&apos;) ) ,  
		OR(ISBLANK( GE_PRM_Standard_discount_Rate__c ), ISBLANK( GE_PRM_Discount_rate_requested__c ) ) ,GE_PRM_Product_Line_Flag__c )</errorConditionFormula>
        <errorMessage>Standard Commission/Discount rate % and Discount/Commission rate requested % are mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Is_Product_Line_Page_Completed1_1</fullName>
        <active>true</active>
        <description>Val Rule for &apos;New&apos; RfA</description>
        <errorConditionFormula>AND(
ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c,&apos;New&apos;) ,
OR(
ISPICKVAL(GE_PRM_Tier_2__c ,&apos;&apos;),
ISPICKVAL(GE_PRM_Tier_3__c ,&apos;&apos;),
ISBLANK( GEPRM_Target_CY__c ),
ISBLANK(GE_PRM_Pipeline__c), 
ISBLANK( GEPRM_Target_NY__c )
)
)</errorConditionFormula>
        <errorMessage>This page is not yet complete. Please fill in all the manadatory(*) fields.1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Is_Product_Line_Page_Completed1_2</fullName>
        <active>true</active>
        <description>Val Rule for Renewal RfA</description>
        <errorConditionFormula>AND(
ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c,&apos;Renewal&apos;) ,
OR(
ISPICKVAL(GE_PRM_Tier_2__c ,&apos;&apos;),
ISPICKVAL(GE_PRM_Tier_3__c ,&apos;&apos;),
ISBLANK( GEPRM_Target_CY__c ),
ISBLANK(GE_PRM_Pipeline__c), 
ISBLANK( GEPRM_Target_NY__c ),
ISBLANK(GE_PRM_YTD_Orders_Volume__c), 
ISBLANK(GE_PRM_Previous_Year_Orders_Volume__c) 
) 
)</errorConditionFormula>
        <errorMessage>This page is not yet complete. Please fill in all the manadatory(*) fields.12</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Is_Product_Line_Page_Completed2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c,&apos;New Product Line/Service&apos;),
OR(
ISPICKVAL(GE_PRM_Tier_2__c ,&apos;&apos;),
ISPICKVAL(GE_PRM_Tier_3__c ,&apos;&apos;),
ISBLANK( GEPRM_Target_CY__c ),
ISBLANK(GE_PRM_Pipeline__c), 
ISBLANK( GEPRM_Target_NY__c ),
ISBLANK(GE_PRM_YTD_Orders_Volume__c),
ISBLANK(GE_PRM_Previous_Year_Orders_Volume__c)
) 
)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>This page is not yet complete. Please fill in all the manadatory(*) fields.2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Is_Product_Line_Page_Completed3</fullName>
        <active>true</active>
        <description>Val Rule for Pipeline VF page on RfA (Termination/Non-Renewal)</description>
        <errorConditionFormula>AND(
OR( ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c,&apos;Termination&apos;) ,
ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c,
&apos;Non-Renewal&apos;)
),
OR(
ISPICKVAL(GE_PRM_Tier_2__c ,&apos;&apos;),
ISPICKVAL(GE_PRM_Tier_3__c ,&apos;&apos;),
ISBLANK( GEPRM_Target_CY__c ),
ISBLANK( GEPRM_Target_NY__c ),
ISBLANK(GE_PRM_YTD_Orders_Volume__c),
ISBLANK(GE_PRM_Previous_Year_Orders_Volume__c)
)
)</errorConditionFormula>
        <errorMessage>This page is not yet complete. Please fill in all the manadatory(*) fields.3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Need_Busniess_Tier_1_to_create_PL</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW(), if(Text(GE_PRM_Recommendation__r.GE_PRM_Business_Tier_1__c ) = &apos;&apos;, true, false))</errorConditionFormula>
        <errorMessage>Recommendation should have Business Tier 1 to create Product Line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Std_Com_Disct_Rate_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(  GE_PRM_Standard_discount_Rate__c ),   ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Compensation_And_Discount_Page__c, &apos;Completed&apos;)  )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Standard_discount_Rate__c</errorDisplayField>
        <errorMessage>Please enter the value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier_4_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( GE_PRM_Tier_4__c ,&apos;&apos;)  , NOT( ISPICKVAL( GE_PRM_Recommendation__r.GE_PRM_Product_Lines_Page__c , &apos;Completed&apos;) ) )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Tier_4__c</errorDisplayField>
        <errorMessage>Tier 4 is required.</errorMessage>
    </validationRules>
</CustomObject>